--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,38 +1,24 @@
 #-----------------------------------------------------------------------------
 #
-# CMAkeLists for DSO-STM32
+# CMAkeLists for lnDSO
 # An opensource firmware for the DSO SHELL 150
 # With optional hardware mods :
 #   - Alterntive rotary encoder wiring : MUCH Better, almost mandatory
 #   - Use GD32F303 as another MCU (much faster, better ADC, more memory)
 #
 #-----------------------------------------------------------------------------
-set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
-include(select_mcu_stm32)
-include(applyPatch)
 
-OPTION(FULL_ROTARY_STEP "Use full step for rotary encoder" FALSE)
+cmake_minimum_required(VERSION 3.0)
 
-#
-# Patch Arduino_stm32 if needed to add gd32f303 support
-#
-include(./platformConfig.cmake)
-APPLY_PATCH_IF_NEEDED(patched gd32_patch.diff              "add gd32f303 support") 
-APPLY_PATCH_IF_NEEDED(patchedm4 m4_activate_fpu.diff       "activate m4 fpu (gd32f303)") 
+SET(AF_FOLDER  ${CMAKE_SOURCE_DIR}/lnArduino/)
+include(./mcuSelect.cmake)
+SET(CMAKE_TOOLCHAIN_FILE ${AF_FOLDER}/lnArduino.cmake)
 
+PROJECT(lnDSO NONE) # the NONE is very important !
 
-cmake_minimum_required(VERSION 2.8)
-#
-SET(CMAKE_TOOLCHAIN_FILE cmake/ArduinoToolchain.cmake)
-Project("dso_stm32" C CXX ASM)
-
-set(ARDUINO_DEFAULT_BOARD ${X_ARDUINO_DEFAULT_BOARD})        # Default Board ID, when not specified
-set(ARDUINO_CPU           ${X_ARDUINO_CPU})
-SET(ARDUINO_UPLOAD_METHOD ${X_ARDUINO_UPLOAD_METHOD}) # Use blackmagic link, if you comment it out you'll use DFU => 8kB flash
-set(ARDUINO_DEFAULT_PORT ttyACM0) # Default Port, when not specified
-
-
-SET(libPrefix ${ARDUINO_DEFAULT_BOARD}_)
+enable_language(C CXX ASM) # this is important too!
+include_directories(${CMAKE_SOURCE_DIR})        
+add_subdirectory(${AF_FOLDER})
 
 
 MESSAGE(STATUS "Starting dso-stm32")
@@ -45,13 +31,11 @@ ELSE(USE_VANILLA_HW)
     SET(EXTENSION "${EXTENSION}_usb")
 ENDIF(USE_VANILLA_HW)
 
-math(EXPR MCU_SPEED_M "${MCU_SPEED}/1000000")
+math(EXPR MCU_SPEED_M "${LN_MCU_SPEED}/1000000")
 SET(EXTENSION "${EXTENSION}_${MCU_SPEED_M}M")
 
  
  
-include_directories(MapleFreeRTOS1000//Source/include)
-include_directories(MapleFreeRTOS1000//)
 include_directories(Adafruit_TFTLCD_8bit_STM32)
 include_directories(.)
 include_directories(adc)
@@ -60,15 +44,13 @@ include_directories(src)
 include_directories(qfp)
 
 # FreeRTOS
-SET(PORTNAME Stm32duino)
 SET(USE_TRIGGER True)
 # Other modules
-ADD_SUBDIRECTORY(adc) 
-ADD_SUBDIRECTORY(MapleFreeRTOS1000/)
-ADD_SUBDIRECTORY(testFunc/)
-ADD_SUBDIRECTORY(captureEngine/)
-ADD_SUBDIRECTORY(qfp)
-ADD_SUBDIRECTORY(Adafruit_TFTLCD_8bit_STM32)
+#ADD_SUBDIRECTORY(adc) 
+#AADD_SUBDIRECTORY(testFunc/)
+#AADD_SUBDIRECTORY(captureEngine/)
+#AADD_SUBDIRECTORY(qfp)
+#AADD_SUBDIRECTORY(Adafruit_TFTLCD_8bit_STM32)
 #
 IF(USE_USB)
     ADD_DEFINITIONS(-DUSE_USB)
@@ -79,19 +61,15 @@ ELSE(USE_USB)
 ENDIF(USE_USB)
 ADD_SUBDIRECTORY(src)
 #
-generate_arduino_firmware(Dso150${EXTENSION} 
-                SKETCH dso150.ino
-                SRCS    myCode.cpp     stopWatch.cpp  cpuID.cpp embedded_printf/printf.c helpers/helper_pwm.cpp  i2c_stubs.c ${USB_SRCS} src/dso_memory.cpp
-                PORT ${ARDUINO_DEFAULT_PORT}
-                BOARD_CPU ${ARDUINO_CPU}
+GENERATE_GD32_FIRMWARE(lnDSO${EXTENSION}
+                myCode.cpp     stopWatch.cpp  cpuID.cpp helpers/helper_pwm.cpp  i2c_stubs.c ${USB_SRCS} src/dso_memory.cpp
                 )
-TARGET_LINK_LIBRARIES( Dso150${EXTENSION}  ${libPrefix}FreeRTOS)
-TARGET_LINK_LIBRARIES( Dso150${EXTENSION}  ${libPrefix}captureEngine)
-TARGET_LINK_LIBRARIES( Dso150${EXTENSION}  ${libPrefix}adc)
-TARGET_LINK_LIBRARIES( Dso150${EXTENSION}  ${libPrefix}TFT)
-TARGET_LINK_LIBRARIES( Dso150${EXTENSION}  ${libPrefix}src)
-TARGET_LINK_LIBRARIES( Dso150${EXTENSION}  ${libPrefix}qfpm3)
-#TARGET_LINK_LIBRARIES( Dso150${EXTENSION}  ${libPrefix}tests)
+TARGET_LINK_LIBRARIES( lnDSO${EXTENSION}  ${libPrefix}captureEngine)
+TARGET_LINK_LIBRARIES( lnDSO${EXTENSION}  ${libPrefix}adc)
+TARGET_LINK_LIBRARIES( lnDSO${EXTENSION}  ${libPrefix}TFT)
+TARGET_LINK_LIBRARIES( lnDSO${EXTENSION}  ${libPrefix}src)
+TARGET_LINK_LIBRARIES( lnDSO${EXTENSION}  ${libPrefix}qfpm3)
+#TARGET_LINK_LIBRARIES( lnDSO${EXTENSION}  ${libPrefix}tests)
 
 
 # Summary
