--- a/testFunc/CMakeLists.txt
+++ b/testFunc/CMakeLists.txt
@@ -1,4 +1,5 @@
 include_directories(../src/ui)
 ADD_LIBRARY(  testLib
                 testFunc.cpp testControl.cpp testMenu.cpp
+                test_testSignal.cpp
                 )
