--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,7 @@ ADD_LIBRARY(  sourceLib
                 DSO_portBArbitrer.cpp 
                 dso_display.cpp dso_mainLoop.cpp dso_uiFunctions.cpp
                 dso_capture_const.cpp
-               # dso_calibrate.cpp
+                dso_calibrate.cpp
                 )
 
         
