--- a/testFunc/CMakeLists.txt
+++ b/testFunc/CMakeLists.txt
@@ -3,4 +3,5 @@ ADD_LIBRARY(  testLib
                 testFunc.cpp testControl.cpp testMenu.cpp
                 test_testSignal.cpp
                 test_drawGfx.cpp
+                test_coupling.cpp
                 )
