bringing back engine slowly

--- a/capture/CMakeLists.txt
+++ b/capture/CMakeLists.txt
@@ -1,6 +1,9 @@
 ADD_LIBRARY(  captureLib
                 dso_capture_stub.cpp
+                dso_capture_const.cpp
                 dso_adc_gain.cpp
+                dso_adc_capture.cpp
+        
                 )
 
         
