use own variant of ADC, event based (incomplet)

--- a/capture/CMakeLists.txt
+++ b/capture/CMakeLists.txt
@@ -3,6 +3,7 @@ ADD_LIBRARY(  captureLib
                 dso_capture_const.cpp
                 dso_adc_gain.cpp
                 dso_adc_capture.cpp
+                dso_adc.cpp
         
                 )
 
