--- a/assets/CMakeLists.txt
+++ b/assets/CMakeLists.txt
@@ -1,4 +1,6 @@
 ADD_LIBRARY(assets 
-            fonts.cpp )
+            fonts.cpp 
+            gfx.cpp
+)
 target_include_directories(assets PRIVATE   ${CMAKE_CURRENT_SOURCE_DIR}  )
 target_include_directories(assets PRIVATE   ${CMAKE_CURRENT_SOURCE_DIR}/../externals/simplerILI9341  )
