--- a/capture/CMakeLists.txt
+++ b/capture/CMakeLists.txt
@@ -1,8 +1,7 @@
 ADD_LIBRARY(  captureLib
-                dso_capture_stub.cpp
                 dso_capture_const.cpp
                 dso_adc_gain.cpp
-                dso_adc_capture.cpp
+                dso_capture.cpp
                 dso_adc.cpp
                 dso_frequency.cpp
         
