add DFU runtime stuff (preliminary)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ SET(LN_ENABLE_I2C  OFF CACHE INTERNAL "")
 SET(LN_ENABLE_SPI  OFF CACHE INTERNAL "")
 SET(LN_USB_NB_CDC  1 CACHE INTERNAL "")
 SET(LN_USB_NB_HID  0 CACHE INTERNAL "")
+SET(LN_USB_DFU_RUNTIME 1 CACHE INTERNAL "")
+
 OPTION(USE_ROTARY_FULL_STEP     "Use full step for rotary encoder, else half step"  FALSE)
 OPTION(USE_USB                  "Enable USB support"                                FALSE)
 OPTION(USE_SMALLFOOTPRINT       "Build for 64k flash targets"                       FALSE)
