remove old test func

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,7 +104,7 @@ USE_LIBRARY(NeVerMind)
 ADD_SUBDIRECTORY(assets)
 ADD_SUBDIRECTORY(src)
 ADD_SUBDIRECTORY(capture)
-ADD_SUBDIRECTORY(testFunc)
+#ADD_SUBDIRECTORY(testFunc)
 #
 IF(LN_ENABLE_USBD)
     include(${AF_FOLDER}/setup.cmake)
@@ -116,7 +116,7 @@ ENDIF(LN_ENABLE_USBD)
 #____________________
 GENERATE_GD32_FIRMWARE(lnDSO${EXTENSION})
 TARGET_LINK_LIBRARIES( lnDSO${EXTENSION}  captureLib )
-TARGET_LINK_LIBRARIES( lnDSO${EXTENSION}  sourceLib testLib)
+TARGET_LINK_LIBRARIES( lnDSO${EXTENSION}  sourceLib )
 IF(LN_ENABLE_USBD)
     TARGET_LINK_LIBRARIES( lnDSO${EXTENSION}  gd32_usb_usbd)
 ENDIF()
