add some general purpose DSO display func

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ ADD_LIBRARY(  sourceLib
                 dso_calibrate.cpp
                 dso_autoSetup.cpp
                 dso_show_capture.cpp
+                dso_test.cpp
                 ${USB_SRC}
                 )
 
